--- a/src/theme/custom.css
+++ b/src/theme/custom.css
@@ -30,7 +30,7 @@
   color: white;
 }
 .btn-secondary {
-  background-color: #6c757d;
+  background-color: #88939c;
   color: white;
 }
 .btn:hover {
